# dimsechord

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: git-commit-agent.md
.claude/hooks/: block-branch-switch.sh  pr-monitor.sh  pr-watch.sh  require-worktree-agent.sh  require-worktree.sh  worktree-stop.sh
.claude/rules/: concurrency-model.md  dicom-domain.md  dicomweb-conversion.md  public-api.md
.github/workflows/: release.yml
docs/: cookbook.md  tutorial-gateway.md  typing.md  why.md
src/dimsechord/: __init__.py  _cache.py  _client.py  _converter.py  _exceptions.py  _handlers.py  _index.py  _models.py  _multipart.py  _pool.py  _pull_engine.py  _scp.py  _scu.py  cache.py  client.py  converter.py  handlers.py  models.py  pool.py  pull_engine.py  scp.py  scu.py
tests/: conftest.py  factories.py  fake_pacs.py
tests/integration/: test_client_get.py  test_end_to_end.py  test_pull_engine.py  test_pull_engine_cget.py  test_pull_engine_pool_multiport.py  test_scp_streaming.py  test_scu_find.py  test_scu_get.py  test_scu_move.py
tests/unit/: test_cache.py  test_converter.py  test_exceptions.py  test_handlers_forward.py  test_index.py  test_models.py  test_multipart.py  test_pool.py  test_public_api.py  test_scu.py
