[project]
name = "dimsechord"
version = "0.3.0"
description = "Pure-Python building blocks for DICOM and DICOMweb services: DIMSE networking, caching, and DICOM↔JSON conversion."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Denis Nesterov" }]
keywords = ["dicom", "dicomweb", "pacs", "pynetdicom", "pydicom", "dimse", "wado", "medical-imaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "pydicom>=2.3.1",
    "pynetdicom>=3.0.4",
    "cachetools>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/radionest/dimsechord"
Repository = "https://github.com/radionest/dimsechord"
Issues = "https://github.com/radionest/dimsechord/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.4.0",
    "mypy>=1.15.0",
    "ruff",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dimsechord"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "DTZ", "Q", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydicom.*", "pynetdicom.*", "cachetools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
timeout = 60
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore:.*is_little_endian.*:DeprecationWarning:pydicom",
    "ignore:.*is_implicit_VR.*:DeprecationWarning:pydicom",
    "ignore:.*Invalid value for VR UI.*:UserWarning:pydicom",
    "ignore:.*Unknown encoding.*:UserWarning:pydicom",
    "ignore::ResourceWarning:pynetdicom",
]
